# ComposioAI

./: .env.example  .gitignore  README.md  check_models.py  pyproject.toml  requirements.txt
ai_research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: __init__.py  constants.py  settings.py
data/input/: apps.csv
docs/: architecture.md
research/: agent.py
src/research_agent/: __init__.py
src/research_agent/adapters/: __init__.py
src/research_agent/adapters/agents/: __init__.py  composio_research_agent.py  composio_verification_agent.py
src/research_agent/adapters/reporting/: __init__.py  html_generator.py
src/research_agent/adapters/storage/: csv_reader.py  json_store.py
src/research_agent/analytics/: __init__.py  engine.py
src/research_agent/cli/: __init__.py  main.py
src/research_agent/domain/: __init__.py  analytics_models.py  enums.py  input_models.py  research_models.py  verification_models.py
src/research_agent/infrastructure/: __init__.py  cache.py  checkpoint_manager.py  logging_setup.py  rate_limiter.py  retry_policy.py
src/research_agent/interfaces/: research_agent_port.py  storage_port.py  verification_agent_port.py
src/research_agent/use_cases/: pipeline_orchestrator.py  run_report_generation.py  run_research.py  run_verification.py
tests/fixtures/: sample_apps.csv
tests/integration/: test_pipeline_end_to_end.py
tests/unit/analytics/: test_engine.py
tests/unit/domain/: test_models.py
verification/: verifier.py
(+3 files in other folders)
