[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-agent"
version = "0.1.0"
description = "Clean Architecture scaffolding for an AI research agent pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=23.2",
  "aiolimiter>=1.1",
  "diskcache>=5.6",
  "jinja2>=3.1",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "rich>=13.7",
  "structlog>=24.1",
  "tenacity>=8.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.4",
]

[project.scripts]
research-agent = "research_agent.cli.main:app"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["research_agent*", "config*"]

[tool.setuptools.package-data]
research_agent = ["adapters/reporting/templates/**/*.jinja"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
